--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gestionix-yak",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "vue-cli-service build --modern",
@@ -9,6 +9,7 @@
     "lint": "run-s lint:all:*",
     "build:ci": "vue-cli-service build --report",
     "dev": "vue-cli-service serve",
+    "ci": "vue-cli-service serve --mode=production",
     "dev:e2e": "vue-cli-service test:e2e --mode=development",
     "docs": "vuepress dev",
     "lint:all:eslint": "npm run lint:eslint --ext .js,.vue .",
