--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ resources:
     type: github
     endpoint: za
     name: zahid/yaktest
-    ref: $(Build.SourceBranchName)
+    ref: develop
 
   - repository: gx-yak-tests # The name used to reference this repository in the checkout step
     type: github
