--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ resources:
   - repository: yaktest # The name used to reference this repository in the checkout step
     type: github
     endpoint: za
-    name: zahid/yaktest
+    name: zahidferz/yaktest
 
   - repository: gx-yak-tests # The name used to reference this repository in the checkout step
     type: github
