--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -71,17 +71,7 @@ jobs:
       - script: |
           npm ci
         displayName: 'Install dependencies'
-        workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
-      
-      - task: Bash@3
-        inputs:
-          filePath: '$(System.DefaultWorkingDirectory)/yaktest/ciserver.sh'
-          workingDirectory: '$(System.DefaultWorkingDirectory)/yaktest/'
-        displayName: 'Start CI Server'
-        name: CIServer
-      - script: echo $(CIServer.IPVar)
-        displayName: "Echo CI Sever"
-        
+        workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/       
 
   - job: Test
     strategy:
@@ -91,41 +81,38 @@ jobs:
     variables:
       IPServer: $[ dependencies.Setup.Outputs['CIServer.IPVar'] ]
 
-    steps:
-      - script: curl $(IPServer):8080
-        displayName: "Echo CI Sever on Test"
+      - task: Bash@3
+        inputs:
+          filePath: '$(System.DefaultWorkingDirectory)/yaktest/ciserver.sh'
+          workingDirectory: '$(System.DefaultWorkingDirectory)/yaktest/'
+        displayName: 'Start CI Server'      
 
-          
-    
+      - script: |
+          npm run test:unit
+        displayName: 'Run tests unit'
+        env:
+          VUE_APP_ACC_PROV_URL_CLIENT_ID: $(VUE_APP_ACC_PROV_URL_CLIENT_ID)
+          VUE_APP_ACC_PROV_URL_CLIENT_SECRET: $(VUE_APP_ACC_PROV_URL_CLIENT_SECRET)
+          VUE_APP_AUTH0_CLIENT_ID: $(VUE_APP_AUTH0_CLIENT_ID)
+          VUE_APP_AUTH_URL_APP_ID: $(VUE_APP_AUTH_URL_APP_ID)
+          VUE_APP_AUTH_URL_CLIENT_ID: $(VUE_APP_AUTH_URL_CLIENT_ID)
+          VUE_APP_AUTH_URL_APP_SECRET: $(VUE_APP_AUTH_URL_APP_SECRET)
+          VUE_APP_INTERCOM: $(VUE_APP_INTERCOM)
+        workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
 
-#      - script: |
-#          npm run test:unit
-#        displayName: 'Run tests unit'
-#        env:
-#          VUE_APP_ACC_PROV_URL_CLIENT_ID: $(VUE_APP_ACC_PROV_URL_CLIENT_ID)
-#          VUE_APP_ACC_PROV_URL_CLIENT_SECRET: $(VUE_APP_ACC_PROV_URL_CLIENT_SECRET)
-#          VUE_APP_AUTH0_CLIENT_ID: $(VUE_APP_AUTH0_CLIENT_ID)
-#          VUE_APP_AUTH_URL_APP_ID: $(VUE_APP_AUTH_URL_APP_ID)
-#          VUE_APP_AUTH_URL_CLIENT_ID: $(VUE_APP_AUTH_URL_CLIENT_ID)
-#          VUE_APP_AUTH_URL_APP_SECRET: $(VUE_APP_AUTH_URL_APP_SECRET)
-#          VUE_APP_INTERCOM: $(VUE_APP_INTERCOM)
-#        workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
-#
-#      - script: |
-#          npx cypress run --spec "tests/e2e/specs/Desktop/*" --reporter-options mochaFile=results/Desktop_Results.xml --record --parallel --ci-build-id $(buildVersion) --group "Desktop" --tag $(STAGE)
-#          npx cypress run --spec "tests/e2e/specs/Mobile/*" --reporter-options mochaFile=results/Mobile_Results.xml --record --parallel --ci-build-id $(buildVersion) --group "Mobile" --tag $(STAGE)
-#        displayName: 'Run tests e2e'
-#        env:
-#          VUE_APP_ACC_PROV_URL_CLIENT_ID: $(VUE_APP_ACC_PROV_URL_CLIENT_ID)
-#          VUE_APP_ACC_PROV_URL_CLIENT_SECRET: $(VUE_APP_ACC_PROV_URL_CLIENT_SECRET)
-#          VUE_APP_AUTH0_CLIENT_ID: $(VUE_APP_AUTH0_CLIENT_ID)
-#          VUE_APP_AUTH_URL_APP_ID: $(VUE_APP_AUTH_URL_APP_ID)
-#          VUE_APP_AUTH_URL_CLIENT_ID: $(VUE_APP_AUTH_URL_CLIENT_ID)
-#          VUE_APP_AUTH_URL_APP_SECRET: $(VUE_APP_AUTH_URL_APP_SECRET)
-#          VUE_APP_INTERCOM: $(VUE_APP_INTERCOM)
-#          CYPRESS_HOST: $(CYPRESS_HOST)
-#        timeoutInMinutes: 15
-#        workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
-#        continueOnError: true
-
-
+      - script: |
+          npx cypress run --spec "tests/e2e/specs/Desktop/*" --reporter-options mochaFile=results/Desktop_Results.xml --record --parallel --ci-build-id $(buildVersion) --group "Desktop" --tag $(STAGE)
+          npx cypress run --spec "tests/e2e/specs/Mobile/*" --reporter-options mochaFile=results/Mobile_Results.xml --record --parallel --ci-build-id $(buildVersion) --group "Mobile" --tag $(STAGE)
+        displayName: 'Run tests e2e'
+        env:
+          VUE_APP_ACC_PROV_URL_CLIENT_ID: $(VUE_APP_ACC_PROV_URL_CLIENT_ID)
+          VUE_APP_ACC_PROV_URL_CLIENT_SECRET: $(VUE_APP_ACC_PROV_URL_CLIENT_SECRET)
+          VUE_APP_AUTH0_CLIENT_ID: $(VUE_APP_AUTH0_CLIENT_ID)
+          VUE_APP_AUTH_URL_APP_ID: $(VUE_APP_AUTH_URL_APP_ID)
+          VUE_APP_AUTH_URL_CLIENT_ID: $(VUE_APP_AUTH_URL_CLIENT_ID)
+          VUE_APP_AUTH_URL_APP_SECRET: $(VUE_APP_AUTH_URL_APP_SECRET)
+          VUE_APP_INTERCOM: $(VUE_APP_INTERCOM)
+          CYPRESS_HOST: $(CYPRESS_HOST)
+        timeoutInMinutes: 15
+        workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
+        continueOnError: true
