Update azure-pipelines-dev.yml for Azure Pipelines

--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -78,11 +78,12 @@ jobs:
       parallel: 3
     displayName: Test 
     dependsOn: Setup
+    steps:
 
       - task: Bash@3
         inputs:
-          filePath: '$(System.DefaultWorkingDirectory)/yaktest/ciserver.sh'
-          workingDirectory: '$(System.DefaultWorkingDirectory)/yaktest/'
+          filePath: '$(System.DefaultWorkingDirectory)/ciserver.sh'
+          workingDirectory: '$(System.DefaultWorkingDirectory)'
         displayName: 'Start CI Server'      
 
       - script: |
@@ -96,7 +97,7 @@ jobs:
           VUE_APP_AUTH_URL_CLIENT_ID: $(VUE_APP_AUTH_URL_CLIENT_ID)
           VUE_APP_AUTH_URL_APP_SECRET: $(VUE_APP_AUTH_URL_APP_SECRET)
           VUE_APP_INTERCOM: $(VUE_APP_INTERCOM)
-        workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
+        workingDirectory: '$(System.DefaultWorkingDirectory)'
 
       - script: |
           npx cypress run --spec "tests/e2e/specs/Desktop/*" --reporter-options mochaFile=results/Desktop_Results.xml --record --parallel --ci-build-id $(buildVersion) --group "Desktop" --tag $(STAGE)
@@ -112,5 +113,5 @@ jobs:
           VUE_APP_INTERCOM: $(VUE_APP_INTERCOM)
           CYPRESS_HOST: $(CYPRESS_HOST)
         timeoutInMinutes: 15
-        workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
+        workingDirectory: '$(System.DefaultWorkingDirectory)'
         continueOnError: true
